--- a/MyShireAppWeb/Web.config
+++ b/MyShireAppWeb/Web.config
@@ -9,8 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ClientId" value="" />
-    <add key="ClientSecret" value="EJKEbI3xsXdkwF+txJ4r2MUSOntyPEu8eVatTW+18cg=" />
+    <add key="ClientId" value="ec5f68eb-9405-4805-8dfb-e19052975040" />
+    <add key="ClientSecret" value="OchhDyRdbvk3onbmSsFUcwx8iJqsW8Ahpgu5z07ae/k=" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -42,6 +42,14 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SharePoint.Client" publicKeyToken="71e9bce111e9429c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-16.1.3912.1204" newVersion="16.1.3912.1204" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SharePoint.Client.Runtime" publicKeyToken="71e9bce111e9429c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-16.1.3912.1204" newVersion="16.1.3912.1204" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -63,4 +71,12 @@
       <add binding="basicHttpBinding" scheme="https" bindingConfiguration="secureBinding" />
     </protocolMapping>
   </system.serviceModel>
+  <system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
 </configuration>
